# xiaohongshu-search

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  GITHUB_SETUP.md  INTEGRATION_PLAN.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  analyze_cached_html.py  app.py  dev-start.sh  docker-compose.yml  pyproject.toml  refresh_cookies.py  requirements.txt  requirements_note_generation.txt  setup.py  simple_refresh_cookies.py  start_servers.py  test_extraction.py  test_force_search_page.py  test_full_system.py  test_integration.py  test_recommendation_fix.py  xiaohongshu_analysis.md
.github/workflows/: ci.yml  deploy.yml
config/: README.md  config.py  requirements.txt
docs/: UPDATE_LOG.md
drivers/chromedriver-local/: README.md
scripts/: quick-deploy.sh  run_server.sh
services/: image-service.ts
src/crawler/: XHS_crawler.py  backend_XHS_crawler.py  xiaohongshu_crawler.py
src/server/: debug_manager.py  image_proxy.py  main_server.py  note_content_extractor.py  note_generator.py  unified_extractor.py
src/utils/: cookie_manager.py  login_helper.py
static/: index.html  note_detail.html
static/css/: note_detail.css  style.css
static/js/: api.js  note_detail.js  script.js
